Modified css and html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -15,7 +16,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg ">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img src="./img/mainlogo.png" width="90px" alt=""></a>
+                    <a class="navbar-brand" href="#"><img src="./img/logo.png" width="90px" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -24,17 +25,17 @@
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
-                            <li class="nav-item m-4 text-dark">
-                                <a class="nav-link " aria-current="page" href="#">Home</a>
+                            <li class="nav-item my-4 me-4 text-dark">
+                                <a class="nav-link " aria-current="page" href="#">Blog</a>
                             </li>
-                            <li class="nav-item m-4 text-dark">
-                                <a class="nav-link" href="#">How tere works</a>
+                            <li class="nav-item my-4 me-4 text-dark">
+                                <a class="nav-link" href="#">About</a>
                             </li>
-                            <li class="nav-item m-4 text-dark">
-                                <a class="nav-link" href="#">Tere benefits</a>
+                            <li class="nav-item my-4 me-4 text-dark">
+                                <a class="nav-link" href="#"><img src="img/searchicon.png" alt=""></a>
                             </li>
-                            <li class="nav-item m-4 ">
-                                <button class="btn  registerBtn">Help Center</button>
+                            <li class="nav-item my-4 me- ">
+                                <button class="btn  registerBtn">Contact Us</button>
                             </li>
                         </ul>
 
@@ -44,42 +45,101 @@
         </div>
     </div>
     <div class="container">
-        <div class="row align-items-center  mt-5 justify-content-lg-between justify-content-sm-center">
-            <div class="col-lg-6 col-sm-12 order-lg-0 order-sm-1 mt-lg-0 mt-sm-5">
-                <h1 class="bold w-75">
-                    DOWNLOAD APP,
-                    SAVE MONEY, MAKE
-                    FRIENDS!
+        <div class="row   justify-content-sm-center herorow">
+            <div class="col-lg-6 col-sm-12  ps-lg-5 mt-sm-5 pt-5 headcollef">
+                <div class="bgimg"></div>
+                <p class="bold text-white">Featured Post</p>
+
+                <h1 class="bold w-75 my-5 text-white">
+                    How AI will Change the Future
                 </h1>
-                <p class="colorgray w-75 my-4">
-                    Its simple and its free. Play your part in reducing Carbon Footprint and help Mother Nature to
-                    sustain its beauty. So what are you waiting for ?
-                    Lets ride together
+                <p class="colorgray w-75 my-4 mb-5 text-white">
+                    The future of AI will see home robots having enhanced intelligence, increased capabilities, and
+                    becoming more personal and possibly cute. For example, home robots will overcome navigation,
+                    direction
                 </p>
-                <div>
-                    <button class="btn bg-dark text-white bold px-3 registerBtn"><img src="img/btn(1).png"
-                            class="me-2 mb-1" width="20%" alt="">Help Center</button>
-                    <button class="btn bg-dark text-white  bold px-3 ms-2 registerBtn"> <img src="img/btn(2).png"
-                            class="me-2 mb-1" width="20%" alt="">Help Center</button>
-                </div>
+                <button class="btn text-dark bg-white rounded  registerBtn">Read More</button>
             </div>
-            <div class="col-lg-6 col-sm-12 d-flex justify-content-lg-end ">
-                <img src="img/herologo.png"  width="80%" alt=""> 
+            <div class="col-lg-6 col-sm-12  mt-lg-5 py-5 mb-5">
+                <img src="img/heroright.png" width="90%" alt="">
             </div>
 
         </div>
 
 
-        <div class="row mt-5 justify-content-center">
-            <div class="w-75  colorgreenbg">
-                <div class="col-lg-4 col-sm-12 ">
-                    <p class=" bold text-white w-50">Let’s go. Get a link
-                        to download the app.</p>
-                </div>
-                <div class="col-lg-4 col-sm-12 ">
-                     <input type="text">
-                </div>
+        <div class="row menimg">
+            <div class="col-11 mx-auto mt-5">
+                <img src="img/mens image.png" class="w-100" height="95%" alt="">
             </div>
+
+        </div>
+        <div class="row ">
+            <div class="col-9 rounded ms-md-auto menrow menrow-lg bg-white p-4">
+                <div class=" w-50 d-flex ">
+                    <p class="bold">DEVELOPMENT</p>
+                    <p class="colorgray ms-lg-4 ms-md-2">16 March 2023</p>
+                </div>
+                <h1 class="bold my-lg-3 my-md-2">
+                    How to make a Game look more attractive with New VR & AI Technology
+                </h1>
+                <p class="colorgray">
+                    Google has been investing in AI for many years and bringing its benefits to individuals,
+                    businesses and communities. Whether it’s publishing state-of-the-art research, building helpful
+                    products or developing tools and resources that enable others, we’re committed to making AI
+                    accessible to everyone.
+
+                </p>
+                <button class="btn colorpurple bg-white my-lg-5 my-md-2  rounded  registerBtn">Read More</button>
+            </div>
+        </div>
+        <div class="card menrow-sm p-4 mt-5">
+
+            <img src="img/mens image.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <div class="  d-flex ">
+                    <p class="bold">DEVELOPMENT</p>
+                    <p class="colorgray ms-2">16 March 2023</p>
+                </div>
+                <h5 class="card-title my-2">How to make a Game look more attractive with New VR & AI Technology</h5>
+                <p class="card-text colorgray my-3">
+                    Google has been investing in AI for many years and bringing its benefits to individuals,
+                    businesses and communities. Whether it’s publishing state-of-the-art research, building helpful
+                    products or developing tools and resources that enable others, we’re committed to making AI
+                    accessible to everyone.
+                </p>
+                <button class="btn colorpurple bg-white mt-5   rounded  registerBtn">Read More</button>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12 d-flex  justify-content-between mt-md-0 mb-md-5 mt-sm-5">
+                <h1 class="bold">Our Recent Post</h1>
+                <button class="btn  registerBtn">View All</button>
+            </div>
+        </div>
+
+        <div class="row   justify-content-sm-center mt-4 men-2-row">
+            <div class="col-lg-6   ">
+                <img src="img/mens image.png" width="100%" height="90%" alt="">
+            </div>
+            <div class="col-lg-6   ">
+                <div class=" w-50 d-flex mb-3 ">
+                    <p class="bold">DEVELOPMENT</p>
+                    <p class="colorgray ms-2">16 March 2023</p>
+                </div>
+                <h1 class="bold ">
+                    How to make a Game look more attractive with New VR & AI Technology
+                </h1>
+                <p class="colorgray mb-4">
+                    Google has been investing in AI for many years and bringing its benefits to individuals,
+                    businesses and communities. Whether it’s publishing state-of-the-art research, building helpful
+                    products or developing tools and resources that enable others, we’re committed to making AI
+                    accessible to everyone.
+
+                </p>
+                <button class="btn colorpurple bg-white my-lg-5   rounded  registerBtn">Read More</button>
+            </div>
+
         </div>
 
 
@@ -89,38 +149,86 @@
 
 
 
+    
 
 
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+            <div class="card">
+                <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div class="  d-flex ">
+                        <p class="bold">Travel</p>
+                        <p class="colorgray ms-2">16 March 2023</p>
+                    </div>
+                    <h5 class="card-title bold">8 Rules of Travelling In Sea You Need To Know</h5>
+                    <p class="card-text colorgray">Travelling in sea has many advantages. Some of the advantages of
+                        transporting
+                        goods by sea include: you can ship large volumes at costs </p>
+                    <p class="card-text"><small class="text-body-secondary colorpurple bold">Read More...</small>
+                    </p>
+                </div>
 
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div class="  d-flex ">
+                        <p class="bold">Travel</p>
+                        <p class="colorgray ms-2">16 March 2023</p>
+                    </div>
+                    <h5 class="card-title bold">8 Rules of Travelling In Sea You Need To Know</h5>
+                    <p class="card-text colorgray">Travelling in sea has many advantages. Some of the advantages
+                        of
+                        transporting
+                        goods by sea include: you can ship large volumes at costs </p>
+                    <p class="card-text"><small class="text-body-secondary colorpurple bold">Read
+                            More...</small></p>
+                </div>
 
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div class="  d-flex ">
+                        <p class="bold">Travel</p>
+                        <p class="colorgray ms-2">16 March 2023</p>
+                    </div>
+                    <h5 class="card-title bold">8 Rules of Travelling In Sea You Need To Know</h5>
+                    <p class="card-text colorgray">Travelling in sea has many advantages. Some of the
+                        advantages of
+                        transporting
+                        goods by sea include: you can ship large volumes at costs </p>
+                    <p class="card-text"><small class="text-body-secondary colorpurple bold">Read
+                            More...</small></p>
+                </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            </div>
+        </div>
 
 
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
