--- a/index.html
+++ b/index.html
@@ -149,110 +149,237 @@
 
 
 
-    
 
 
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-            <div class="card">
-                <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <div class="  d-flex ">
-                        <p class="bold">Travel</p>
-                        <p class="colorgray ms-2">16 March 2023</p>
+
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card">
+                    <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="  d-flex ">
+                            <p class="bold">Travel</p>
+                            <p class="colorgray ms-2">16 March 2023</p>
+                        </div>
+                        <h5 class="card-title bold">8 Rules of Travelling In Sea You Need To Know</h5>
+                        <p class="card-text colorgray">Travelling in sea has many advantages. Some of the advantages of
+                            transporting
+                            goods by sea include: you can ship large volumes at costs </p>
+                        <p class="card-text"><small class="text-body-secondary colorpurple bold">Read More...</small>
+                        </p>
                     </div>
-                    <h5 class="card-title bold">8 Rules of Travelling In Sea You Need To Know</h5>
-                    <p class="card-text colorgray">Travelling in sea has many advantages. Some of the advantages of
-                        transporting
-                        goods by sea include: you can ship large volumes at costs </p>
-                    <p class="card-text"><small class="text-body-secondary colorpurple bold">Read More...</small>
-                    </p>
-                </div>
 
+                </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <div class="  d-flex ">
-                        <p class="bold">Travel</p>
-                        <p class="colorgray ms-2">16 March 2023</p>
+            <div class="col">
+                <div class="card">
+                    <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="  d-flex ">
+                            <p class="bold">Travel</p>
+                            <p class="colorgray ms-2">16 March 2023</p>
+                        </div>
+                        <h5 class="card-title bold">8 Rules of Travelling In Sea You Need To Know</h5>
+                        <p class="card-text colorgray">Travelling in sea has many advantages. Some of the advantages
+                            of
+                            transporting
+                            goods by sea include: you can ship large volumes at costs </p>
+                        <p class="card-text"><small class="text-body-secondary colorpurple bold">Read
+                                More...</small></p>
                     </div>
-                    <h5 class="card-title bold">8 Rules of Travelling In Sea You Need To Know</h5>
-                    <p class="card-text colorgray">Travelling in sea has many advantages. Some of the advantages
-                        of
-                        transporting
-                        goods by sea include: you can ship large volumes at costs </p>
-                    <p class="card-text"><small class="text-body-secondary colorpurple bold">Read
-                            More...</small></p>
-                </div>
 
+                </div>
             </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <div class="  d-flex ">
-                        <p class="bold">Travel</p>
-                        <p class="colorgray ms-2">16 March 2023</p>
+            <div class="col">
+                <div class="card">
+                    <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="  d-flex ">
+                            <p class="bold">Travel</p>
+                            <p class="colorgray ms-2">16 March 2023</p>
+                        </div>
+                        <h5 class="card-title bold">8 Rules of Travelling In Sea You Need To Know</h5>
+                        <p class="card-text colorgray">Travelling in sea has many advantages. Some of the
+                            advantages of
+                            transporting
+                            goods by sea include: you can ship large volumes at costs </p>
+                        <p class="card-text"><small class="text-body-secondary colorpurple bold">Read
+                                More...</small></p>
                     </div>
-                    <h5 class="card-title bold">8 Rules of Travelling In Sea You Need To Know</h5>
-                    <p class="card-text colorgray">Travelling in sea has many advantages. Some of the
-                        advantages of
-                        transporting
-                        goods by sea include: you can ship large volumes at costs </p>
-                    <p class="card-text"><small class="text-body-secondary colorpurple bold">Read
-                            More...</small></p>
-                </div>
 
+                </div>
             </div>
+
+
         </div>
+
+          <div class="row my-5">
+            <div class="col-12">
+                <h1 class="bold">Popular Post</h1>
+            </div>
+          </div>
+
+           <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card">
+                    <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="  d-flex ">
+                            <p class="bold">Travel</p>
+                            <p class="colorgray ms-2">16 March 2023</p>
+                        </div>
+                        <h5 class="card-title bold">8 Rules of Travelling In Sea You Need To Know</h5>
+                        <p class="card-text colorgray">Travelling in sea has many advantages. Some of the advantages of
+                            transporting
+                            goods by sea include: you can ship large volumes at costs </p>
+                        <p class="card-text"><small class="text-body-secondary colorpurple bold">Read More...</small>
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="  d-flex ">
+                            <p class="bold">Travel</p>
+                            <p class="colorgray ms-2">16 March 2023</p>
+                        </div>
+                        <h5 class="card-title bold">8 Rules of Travelling In Sea You Need To Know</h5>
+                        <p class="card-text colorgray">Travelling in sea has many advantages. Some of the advantages
+                            of
+                            transporting
+                            goods by sea include: you can ship large volumes at costs </p>
+                        <p class="card-text"><small class="text-body-secondary colorpurple bold">Read
+                                More...</small></p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="  d-flex ">
+                            <p class="bold">Travel</p>
+                            <p class="colorgray ms-2">16 March 2023</p>
+                        </div>
+                        <h5 class="card-title bold">8 Rules of Travelling In Sea You Need To Know</h5>
+                        <p class="card-text colorgray">Travelling in sea has many advantages. Some of the
+                            advantages of
+                            transporting
+                            goods by sea include: you can ship large volumes at costs </p>
+                        <p class="card-text"><small class="text-body-secondary colorpurple bold">Read
+                                More...</small></p>
+                    </div>
+
+                </div>
+            </div>
+
+
+        </div>
+
+
+         <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
+            <div class="col">
+                <div class="card">
+                    <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="  d-flex ">
+                            <p class="bold">Travel</p>
+                            <p class="colorgray ms-2">16 March 2023</p>
+                        </div>
+                        <h5 class="card-title bold">8 Rules of Travelling In Sea You Need To Know</h5>
+                        <p class="card-text colorgray">Travelling in sea has many advantages. Some of the advantages of
+                            transporting
+                            goods by sea include: you can ship large volumes at costs </p>
+                        <p class="card-text"><small class="text-body-secondary colorpurple bold">Read More...</small>
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="  d-flex ">
+                            <p class="bold">Travel</p>
+                            <p class="colorgray ms-2">16 March 2023</p>
+                        </div>
+                        <h5 class="card-title bold">8 Rules of Travelling In Sea You Need To Know</h5>
+                        <p class="card-text colorgray">Travelling in sea has many advantages. Some of the advantages
+                            of
+                            transporting
+                            goods by sea include: you can ship large volumes at costs </p>
+                        <p class="card-text"><small class="text-body-secondary colorpurple bold">Read
+                                More...</small></p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img src="img/Image Placeholder.svg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <div class="  d-flex ">
+                            <p class="bold">Travel</p>
+                            <p class="colorgray ms-2">16 March 2023</p>
+                        </div>
+                        <h5 class="card-title bold">8 Rules of Travelling In Sea You Need To Know</h5>
+                        <p class="card-text colorgray">Travelling in sea has many advantages. Some of the
+                            advantages of
+                            transporting
+                            goods by sea include: you can ship large volumes at costs </p>
+                        <p class="card-text"><small class="text-body-secondary colorpurple bold">Read
+                                More...</small></p>
+                    </div>
+
+                </div>
+            </div>
+
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
